crates/simplexpr/src/snapshots/simplexpr__dynval__test__parse_range-6.snap
---
source: crates/simplexpr/src/dynval.rs
expression: "DynVal::from(\"1..2\").as_range()"
---
Ok(
    (
        Included(
            1.0,
        ),
        Excluded(
            2.0,
        ),
    ),
)
