crates/simplexpr/src/snapshots/simplexpr__dynval__test__parse_range.snap
---
source: crates/simplexpr/src/dynval.rs
expression: "DynVal::from(\"..\").as_range()"
---
Ok(
    (
        Unbounded,
        Unbounded,
    ),
)
