crates/simplexpr/src/snapshots/simplexpr__dynval__test__parse_vec-2.snap
---
source: crates/simplexpr/src/dynval.rs
expression: "DynVal::from_string(\"[hi]\".to_string()).as_vec()"

---
Ok(
    [
        "hi",
    ],
)
