crates/simplexpr/src/snapshots/simplexpr__dynval__test__parse_vec-4.snap
---
source: crates/simplexpr/src/dynval.rs
expression: "DynVal::from_string(\"[hi\\\\,ho]\".to_string()).as_vec()"

---
Ok(
    [
        "hi,ho",
    ],
)
