crates/simplexpr/src/snapshots/simplexpr__dynval__test__parse_vec-5.snap
---
source: crates/simplexpr/src/dynval.rs
expression: "DynVal::from_string(\"[hi\\\\,ho,hu]\".to_string()).as_vec()"

---
Ok(
    [
        "hi,ho",
        "hu",
    ],
)
