crates/simplexpr/src/snapshots/simplexpr__dynval__test__parse_vec-6.snap
---
source: crates/simplexpr/src/dynval.rs
expression: "DynVal::from_string(\"\".to_string()).as_vec()"

---
Ok(
    [],
)
