crates/simplexpr/src/snapshots/simplexpr__dynval__test__parse_vec-7.snap
---
source: crates/simplexpr/src/dynval.rs
expression: "DynVal::from_string(\"[a,b\".to_string()).as_vec()"

---
Err(
    ConversionError {
        value: "[a,b",
        target_type: "vec",
        source: None,
    },
)
