crates/simplexpr/src/snapshots/simplexpr__dynval__test__parse_vec-8.snap
---
source: crates/simplexpr/src/dynval.rs
expression: "DynVal::from_string(\"a]\".to_string()).as_vec()"

---
Err(
    ConversionError {
        value: "a]",
        target_type: "vec",
        source: None,
    },
)
