crates/simplexpr/src/snapshots/simplexpr__dynval__test__parse_vec.snap
---
source: crates/simplexpr/src/dynval.rs
expression: "DynVal::from_string(\"[]\".to_string()).as_vec()"

---
Ok(
    [
        "",
    ],
)
